// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox app default Can't resolve @import in CSS file 1`] = `
"./app/styles2.css
Module not found: Can't resolve './boom.css'

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./app/styles1.css"
`;

exports[`ReactRefreshLogBox app default Import trace when module not found in layout 1`] = `
"./app/module.js (1:0)
Module not found: Can't resolve 'non-existing-module'
> 1 | import "non-existing-module"

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./app/layout.js"
`;

exports[`ReactRefreshLogBox app default Should not show __TURBOPACK__default__export__ or __webpack_exports__ when exporting anonymous arrow function 1`] = `
"index.js (3:10) @ default

  1 | export default () => {
  2 | if (typeof window !== 'undefined') {
> 3 |   throw new Error('test')
    |        ^
  4 | }
  5 |
  6 | return null"
`;

exports[`ReactRefreshLogBox app default boundaries 1`] = `
"FunctionDefault.js (1:50) @ FunctionDefault

> 1 | export default function FunctionDefault() { throw new Error('no'); }
    |                                                  ^"
`;

exports[`ReactRefreshLogBox app default conversion to class component (1) 1`] = `
"Child.js (4:10) @ ClickCount.render

  2 | export default class ClickCount extends Component {
  3 | render() {
> 4 |   throw new Error()
    |        ^
  5 | }
  6 | }"
`;

exports[`ReactRefreshLogBox app default css syntax errors 1`] = `
"./index.module.css (1:1)
Syntax error: Selector "button" is not pure (pure selectors must contain at least one local class or id)

> 1 | button {}
    | ^"
`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 1`] = `"Error: end http://nextjs.org"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 2`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 3`] = `"Error: http://nextjs.org start"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 4`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 5`] = `"Error: middle http://nextjs.org end"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 6`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 8`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 9`] = `"http://example.com/"`;

exports[`ReactRefreshLogBox app default module init error not shown 1`] = `
"index.js (3:6) @ eval

  1 | // top offset for snapshot
  2 | import * as React from 'react';
> 3 | throw new Error('no')
    |    ^
  4 | class ClassDefault extends React.Component {
  5 | render() {
  6 |   return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox app default should strip whitespace correctly with newline 1`] = `
"index.js (8:26) @ onClick

   6 |
   7 | <a onClick={() => {
>  8 |   throw new Error('idk')
     |        ^
   9 | }}>
  10 |   click me
  11 | </a>"
`;

exports[`ReactRefreshLogBox app default unterminated JSX 1`] = `
"./index.js
Error: 
  x Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`?
   ,-[TEST_DIR/index.js:4:1]
 4 |       <p>lol</p>
 5 |     div
 6 |   )
 7 | }
   : ^
   \`----

  x Unexpected eof
   ,-[TEST_DIR/index.js:4:1]
 4 |       <p>lol</p>
 5 |     div
 6 |   )
 7 | }
   \`----

Caused by:
    Syntax Error

Import trace for requested module:
./index.js
./app/page.js"
`;

exports[`ReactRefreshLogBox app turbo Can't resolve @import in CSS file 1`] = `null`;

exports[`ReactRefreshLogBox app turbo Import trace when module not found in layout 1`] = `
"error - app/module.js:1:0 Module not found: Can't resolve 'non-existing-module'
> 1 | import "non-existing-module"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
It was not possible to find the requested file.
    Parsed request as written in source code: module "non-existing-module"
    Path where resolving has started: [project]/app/module.js
    Type of request: EcmaScript Modules request
    Import map: No import map entry"
`;

exports[`ReactRefreshLogBox app turbo Should not show __TURBOPACK__default__export__ or __webpack_exports__ when exporting anonymous arrow function 1`] = `
"index.js (1:13) @ __TURBOPACK__default__export__

> 1 | export default () => {
    |           ^
  2 | if (typeof window !== 'undefined') {
  3 |   throw new Error('test')
  4 | }"
`;

exports[`ReactRefreshLogBox app turbo boundaries 1`] = `
"FunctionDefault.js (0:24) @ FunctionDefault

  1 | export default function FunctionDefault() { throw new Error('no'); }"
`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 1`] = `"Error: end http://nextjs.org"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 2`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 3`] = `"Error: http://nextjs.org start"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 4`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 5`] = `"Error: middle http://nextjs.org end"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 6`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 8`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 9`] = `"http://example.com/"`;

exports[`ReactRefreshLogBox app turbo module init error not shown 1`] = `
"index.js (3:6) @ <unknown>

  1 | // top offset for snapshot
  2 | import * as React from 'react';
> 3 | throw new Error('no')
    |    ^
  4 | class ClassDefault extends React.Component {
  5 | render() {
  6 |   return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox app turbo should strip whitespace correctly with newline 1`] = `
"index.js (6:30) @ onClick

  4 |
  5 | <p>index page</p>
> 6 |
    | ^
  7 | <a onClick={() => {
  8 |   throw new Error('idk')
  9 | }}>"
`;

exports[`ReactRefreshLogBox app turbo unterminated JSX 1`] = `
"error - index.js:7:1 Parsing ecmascript source code failed
  5 |     div
  6 |   )
> 7 | }
    |  ^
Unexpected eof"
`;
